--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -47,7 +47,7 @@
         android:id="@+id/userRideTrackingFragment"
         android:name="inc.visor.voom.app.user.tracking.UserRideTrackingFragment"
         android:label="UserRideTrackingFragment">
-        <deepLink app:uri="voom://ride/tracking" />
+        <deepLink app:uri="voom://ride-tracking" />
     </fragment>
     <fragment
         android:id="@+id/userHomeFragment"
