--- a/voom-fe/src/app/shared/rate-ride-form/rate-ride-form.html
+++ b/voom-fe/src/app/shared/rate-ride-form/rate-ride-form.html
@@ -31,6 +31,10 @@
         </textarea>
     </div>
 
+    @if(driverRating() === 0 || carRating() === 0) { 
+        <p class="text-sm text-red-600 text-center mt-5"> Please provide ratings for both driver and vehicle before submitting your review. </p> 
+    }
+
     <button
         class="mt-4 rounded-full bg-blue-900 px-6 py-2 text-white text-sm font-medium hover:bg-blue-950 transition cursor-pointer"
         (click)="submitReview()">
