--- a/voom-fe/src/app/main-shell/user-pages/ride-tracking/ride-tracking.html
+++ b/voom-fe/src/app/main-shell/user-pages/ride-tracking/ride-tracking.html
@@ -14,7 +14,7 @@
       </div>
     </div>
 
-    <h2 class="text-lg font-semibold text-gray-900">
+    <h2 class="text-lg font-semibold text-gray-900 ride-over-title">
       Your ride is complete!
     </h2>
 
