--- a/voom-fe/src/app/main-shell/user-pages/user-home/user-home.html
+++ b/voom-fe/src/app/main-shell/user-pages/user-home/user-home.html
@@ -24,11 +24,13 @@
           <app-value-input-string
             label="Pickup Location"
             formControlName="pickup"
+            data-testid="pickup-input"
           ></app-value-input-string>
 
           <app-value-input-string
             label="Dropoff Location"
             formControlName="dropoff"
+            data-testid="dropoff-input"
           ></app-value-input-string>
 
           <app-dropdown
@@ -168,6 +170,7 @@
                 class="flex-1 text-sm"
                 [disabled]="isLocked"
                 (click)="addRouteToFavorites()"
+                data-testid="add-favorites-btn"
               >
                 Add to favorites
               </button>
@@ -178,6 +181,7 @@
                 class="flex-1 text-sm"
                 [disabled]="isLocked"
                 (click)="openFavoriteRoutes()"
+                data-testid="open-favorites-btn"
               >
                 Choose from favorites
               </button>
