test: Favorite routes happy path.

--- a/voom-fe/src/app/main-shell/user-pages/user-home/user-home.html
+++ b/voom-fe/src/app/main-shell/user-pages/user-home/user-home.html
@@ -39,6 +39,7 @@
             [options]="vehicleOptions"
             [(selected)]="selectedVehicle"
             [disabled]="isLocked"
+            data-testid="vehicle-dropdown"
           ></app-dropdown>
 
           <app-dropdown
@@ -47,6 +48,7 @@
             [options]="timeOptions"
             [(selected)]="selectedTime"
             [disabled]="isLocked"
+            data-testid="time-dropdown"
           ></app-dropdown>
         </div>
 
@@ -159,6 +161,7 @@
                 !rideForm.valid || (isLaterSelected && !isScheduledTimeValid()) || isLocked
               "
               (click)="confirmRide()"
+              data-testid="confirm-ride-btn"
             >
               Confirm Ride
             </button>
