--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-activity/admin-activity.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-activity/admin-activity.html
@@ -17,8 +17,10 @@
                 <div class="flex items-center space-x-4">
                   @if (ride.status === 'SCHEDULED' || ride.status === 'USER_CANCELLED' || ride.status === 'DRIVER_CANCELLED') {
                     <div class="text-lg font-normal">{{ getParsedTime(ride.rideRequest.scheduledTime)}}</div>
+                    <div class="text-lg font-normal">{{ getParsedDate(ride.startedAt) }}</div>
                   } @else {
                     <div class="text-lg font-normal">{{ getParsedTime(ride.startedAt)}} - {{ getParsedTime(ride.finishedAt) }}</div>
+                    <div class="text-lg font-normal">{{ getParsedDate(ride.startedAt) }}</div>
                   }
                 </div>
                 <div class="flex items-center space-x-4">
