--- a/voom-fe/src/app/main-shell/user-pages/user-activity/user-activity.html
+++ b/voom-fe/src/app/main-shell/user-pages/user-activity/user-activity.html
@@ -12,7 +12,7 @@
   <div class="py-8 space-y-4">
     @for (ride of history; track ride.id) {
     <mat-expansion-panel data-testid="ride-expansion-panel" hideToggle>
-      <mat-expansion-panel-header>
+      <mat-expansion-panel-header data-testid="ride-expansion-panel-header">
         <mat-panel-title class="flex items-center justify-between">
           <div class="flex items-center space-x-4">
             <div class="text-lg font-normal" data-testid="ride-time">{{ getParsedTime(ride.startedAt) }} - {{ getParsedTime(ride.finishedAt) }}</div>
