added class to error paragraph for easier querying in selenium

--- a/voom-fe/src/app/shared/rate-ride-form/rate-ride-form.html
+++ b/voom-fe/src/app/shared/rate-ride-form/rate-ride-form.html
@@ -32,7 +32,7 @@
     </div>
 
     @if(driverRating() === 0 || carRating() === 0) { 
-        <p class="text-sm text-red-600 text-center mt-5"> Please provide ratings for both driver and vehicle before submitting your review. </p> 
+        <p class="text-sm text-red-600 text-center mt-5 rating-validation-error"> Please provide ratings for both driver and vehicle before submitting your review. </p> 
     }
 
     <button
