--- a/voom-app/app/src/main/res/layout/ride_history_dialog.xml
+++ b/voom-app/app/src/main/res/layout/ride_history_dialog.xml
@@ -177,6 +177,7 @@
                 app:cardElevation="2dp">
 
                 <LinearLayout
+                    android:id="@+id/scheduleLinearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
