--- a/voom-app/app/src/main/res/menu/admin_bottom_nav_menu.xml
+++ b/voom-app/app/src/main/res/menu/admin_bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="Home"/>
 
     <item
-        android:id="@+id/nav_tracking"
-        android:icon="@drawable/round_apps_24"
-        android:title="Tracking"/>
+        android:id="@+id/nav_chat"
+        android:icon="@drawable/chat"
+        android:title="Chat"/>
 
     <item
         android:id="@+id/nav_insights"
@@ -26,5 +26,6 @@
         android:id="@+id/nav_profile"
         android:icon="@drawable/round_manage_accounts_24"
         android:title="Profile"/>
+
 
 </menu>
